--- a/style.css
+++ b/style.css
@@ -1,1 +1,37 @@
 /* style.css */
+
+html, body {
+	padding: 0;
+	margin: 0;
+	height: 100%;
+	font-family: Ubuntu;
+	color: white;
+}
+
+#up, #down {
+	font-size: 32px;
+	height: 50%;
+	width: 100%;
+	/*text-align: center;*/
+	display: table;
+}
+
+#up {
+	background-color: #CF424D;
+}
+
+#down {
+	background-color: #3A99D8;
+}
+
+#level {
+	position: fixed;
+	top: 5px;
+	left: 5px;
+}
+
+.center {
+	text-align: center;
+    display: table-cell;
+    vertical-align: middle;
+}
