--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-/* style.css */
-
 html, body {
 	padding: 0;
 	margin: 0;
@@ -28,6 +26,24 @@ html, body {
 	position: fixed;
 	top: 5px;
 	left: 5px;
+}
+
+#flash-banner {
+	background-color: #30AD63;
+
+/*	border-bottom-width: 2px;
+	border-left-width: 0px;
+	border-right-width: 0px;
+	border-color: #EFEFEF;
+	border-style: solid;
+	border-top-width: 2px;*/
+
+	font-size: 24px;
+	padding: 10px;
+	position: fixed;
+	text-align: center;
+	top: 48%;
+	width: 100%;
 }
 
 .center {
